# ionworks-schema

./: .gitignore  CHANGELOG.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  unit_tests.yml
demo/: 01_generate_config.py  02_run_config.py  README.md  config.json  generate_synthetic_data.py
demo/data/: cathode_ocp.csv
src/ionworks_schema/: __init__.py  _element_registry.py  _types.py  base.py  validation.py
src/ionworks_schema/calculations/: __init__.py  calculations.py
src/ionworks_schema/core/: __init__.py  core.py
src/ionworks_schema/costs/: __init__.py
src/ionworks_schema/data_fit/: __init__.py  data_fit.py
src/ionworks_schema/direct_entries/: __init__.py  direct_entries.py  function_schemas.py  registry.py
src/ionworks_schema/distribution_samplers/: __init__.py  distribution_samplers.py
src/ionworks_schema/models/: __init__.py  models.py
src/ionworks_schema/objective_functions/: __init__.py  objective_functions.py  regularizers.py
src/ionworks_schema/objectives/: __init__.py  objectives.py
src/ionworks_schema/parameter/: __init__.py  parameter.py
src/ionworks_schema/parameter_estimators/: __init__.py  parameter_estimators.py
src/ionworks_schema/priors/: __init__.py
src/ionworks_schema/solvers/: __init__.py  solvers.py
src/ionworks_schema/stats/: __init__.py  stats.py
src/ionworks_schema/transforms/: __init__.py  transforms.py
tests/: test_basic.py  test_calculations.py  test_data_fit.py  test_direct_entries.py  test_direct_entry_functions.py  test_objectives.py
