[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ionworks-schema"
dynamic = ["version"]
description = "Pydantic schemas for building Ionworks pipeline configurations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ionworks", email = "info@ionworks.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["ionworks", "battery", "pydantic", "schema", "pipeline"]
dependencies = ["pydantic>=2.0", "numpy", "pandas"]

[project.urls]
Homepage = "https://ionworks.com"
Documentation = "https://docs.ionworks.com"
Repository = "https://github.com/ionworks/ionworks-schema"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ionworks_schema/_version.py"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP038",  # Use X | Y in isinstance (not supported in all Python versions)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
