[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ionworks-schema"
version = "0.3.3"
description = "Pydantic schemas for building Ionworks pipeline configurations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ionworks", email = "info@ionworks.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["ionworks", "battery", "pydantic", "schema", "pipeline"]
dependencies = ["pydantic>=2.12.5,<3", "numpy>=1.26,<2", "pandas>=2.0,<3", "pybamm>=25.12.2"]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=7.0"]

[project.urls]
Homepage = "https://ionworks.com"
Documentation = "https://docs.ionworks.com"
Repository = "https://github.com/ionworks/ionworks-schema"

[tool.hatch.build.targets.wheel]
packages = ["src/ionworks_schema"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
